# TeamFlow

./: .env.sample  .gitignore  README.md  pyproject.toml
calendars/: tests.py  urls.py  views.py
config/: settings.py  urls.py
evaluations/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
evaluations/migrations/: 0001_initial.py  0002_alter_evaluation_options_evaluation_author_and_more.py  0003_alter_evaluation_created_at_alter_evaluation_score_and_more.py  0004_evaluation_unique_evaluation_per_task.py
meetings/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
meetings/migrations/: 0001_initial.py  0002_alter_meeting_options_meeting_date_and_more.py  0003_alter_meeting_date_alter_meeting_end_time_and_more.py  0004_alter_meeting_end_time_alter_meeting_start_time.py
tasks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_options_task_author_task_deadline_and_more.py  0003_alter_task_author_alter_task_deadline_and_more.py  0004_alter_comment_author.py  0005_alter_task_author.py  0006_alter_comment_author_alter_comment_created_at_and_more.py
teams/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
teams/migrations/: 0001_initial.py  0002_alter_team_options_team_created_at_team_description_and_more.py  0003_alter_team_created_at_alter_team_members_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0003_alter_user_first_name_alter_user_last_name.py  (+1 more)
(+1 files in other folders)
