[tool.poetry]
name = "teamflow"
version = "0.1.0"
description = ""
authors = ["Alexandra Goldobina <goldobina.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
djangorestframework = "^3.16.0"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
pillow = "^11.2.1"
black = "^25.1.0"
isort = "^6.0.1"
djangorestframework-simplejwt = "^5.5.0"
coverage = "^7.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
